# langchain_practice

./: main.py  pyproject.toml
